--- a/templates/index.html
+++ b/templates/index.html
@@ -8,8 +8,8 @@
         const result = await fetch(`https://realty-in-us.p.rapidapi.com/properties/v2/detail?zpid=${extractZpid(url)}`, {
             method: "GET",
             headers: {
-                "X-RapidAPI-Key": "YOUR_RAPIDAPI_KEY",
-                "X-RapidAPI-Host": "realty-in-us.p.rapidapi.com"
+                "X-RapidAPI-Key": "bea0bf4b12mshdc9f9e18688347bp10c67djsnd9e4d6dd4cab",
+                "X-RapidAPI-Host": "rapidapi.com"
             }
         });
         const data = await result.json();
